# harfang3d

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_RULES.md  CONTRIBUTING.md  LICENSE  LICENSE-3RD-PARTIES  LICENSE-HARFANG-COMMERCIAL  LICENSE.LGPL3  _clang-format  contributors.md  readme.md  release-notes.md  requirements.txt  roadmap.md
binding/: CMakeLists.txt  bind_harfang.py  fabgen.h
doc/: CMakeLists.txt  doc_editor.py  doc_to_html.bat  doc_to_html.py  doc_to_hugo.py  markdown.css  search_index.py
doc/doc/: ARGB32.md  ARGB32ToRGBA32.md  Abs.md  AddAssetsFolder.md  AddAssetsPackage.md  AlphaScale.md  ApplyBloom.md  ApplySAO.md  AudioInit.md  AudioShutdown.md  BaseToEuler.md  BeginProfilerSection.md  BlendMode.md  Bloom.md  Camera.md  Camera_GetFov.md  Camera_GetIsOrthographic.md  Camera_GetZFar.md  Camera_GetZNear.md  Camera_SetFov.md  Camera_SetIsOrthographic.md  Camera_SetZFar.md  Camera_SetZNear.md  Canvas.md  CaptureProfilerFrame.md  CaptureTexture.md  CastPipelineToForwardPipeline.md  Ceil.md  ChromaScale.md  Clamp.md  ClampLen.md  ClassifyLine.md  ClassifySegment.md  CleanPath.md  ClipSpaceToScreenSpace.md  Close.md  Cm.md  Collision.md  Collision_GetMass.md  Collision_GetType.md  (+950 more)
doc/doc_utils/: api_compare.py  api_tools.py  doc_tools.py  html_tools.py  metadata.py  metadata_unit_test.py
harfang/: .gitignore  CMakeLists.txt  doxyfile.tpl
harfang/cmake/: CodeCoverage.cmake  FindEGL.cmake  FindOpenGLES2.cmake  FindOpenGLES3.cmake  Findreadline.cmake  Finduuid.cmake  aarch64-poky-linux.cmake  harfangConfig.cmake.in
harfang/engine/: CMakeLists.txt  aaa_blur.cpp  aaa_blur.h  anim_load_binary.cpp  anim_load_json.cpp  animation.cpp  animation.h  assets.cpp  assets.h  assets_rw_interface.cpp  assets_rw_interface.h  audio.cpp  audio.h  audio_stream_interface.h  bloom.cpp  bloom.h  component.cpp  create_geometry.cpp  create_geometry.h  cubemap.cpp  cubemap.h  dear_imgui.cpp  dear_imgui.h  debugger.cpp  debugger.h  dof.cpp  dof.h  downsample.cpp  downsample.h  file_format.h  font.cpp  font.h  forward_pipeline.cpp  forward_pipeline.h  fps_controller.cpp  fps_controller.h  geometry.cpp  geometry.h  geometry_builder.cpp  geometry_builder.h  (+71 more)
harfang/foundation/: CMakeLists.txt  ascii_encoder.cpp  ascii_encoder.h  assert.cpp  assert.h  axis.h  bit.cpp  bit.h  build_info.cpp.in  build_info.h  byte_sort.h  cext.h  clock.cpp  clock.h  cmd_line.cpp  cmd_line.h  color.cpp  color.h  country.cpp  country.h  curve.h  data.cpp  data.h  data_rw_interface.cpp  data_rw_interface.h  dir.cpp  dir.h  easing.cpp  easing.h  endian.cpp  endian.h  file.cpp  file.h  file_rw_interface.cpp  file_rw_interface.h  format.cpp  format.h  frustum.cpp  frustum.h  gen_build_info_cpp.py  (+86 more)
harfang/platform/: CMakeLists.txt  call_stack.h  crash_dump.h  filesystem_watcher.cpp  filesystem_watcher.h  input_system.cpp  input_system.h  platform.h  process.h  shared_library.h  window_system.h  window_system_base.cpp
harfang/platform/android/: android_jni.cpp  android_jni.h  input_system.cpp  io_aasset.cpp  io_aasset.h  jnipp.h  logcat_immediate_output.cpp  logcat_immediate_output.h  platform.cpp  window_system.cpp  window_system.h
harfang/platform/glfw/: input_system_glfw.cpp  input_system_glfw.h  window_system.cpp  window_system.h
harfang/platform/osx/: cocoa_window_system.cpp  cocoa_window_system.h  cocoa_window_system.m  osx_input_keyboard.cpp  osx_input_keyboard.h  osx_input_mouse.cpp  osx_input_mouse.h  osx_input_system.cpp  osx_input_system.h  platform.cpp
harfang/platform/posix/: assert.cpp  call_stack.cpp  crash_dump.cpp  platform.cpp  process.cpp  shared_library.cpp  thread.cpp
harfang/platform/sdl/: input_system.cpp  input_system_sdl.cpp  input_system_sdl.h  platform_sdl.cpp  readme.txt  window_system.cpp
harfang/platform/win32/: assert.cpp  assert.h  call_stack.cpp  crash_dump.cpp  input_dinput.cpp  input_dinput.h  platform.cpp  platform.h  process.cpp  shared_library.cpp  thread.cpp
harfang/script/: CMakeLists.txt  lua_vm.cpp  lua_vm.h
harfang/tests/: CMakeLists.txt  dummy_video_stream.cpp  main.cpp  shared.cpp  shared.h  t_animation.cpp  t_assets.cpp  t_audio.cpp  t_bgfx.cpp  t_clock.cpp  t_container.cpp  t_curve.cpp  t_dir.cpp  t_draw_geometry_perf.cpp  t_filters.cpp  t_font.cpp  t_guid.cpp  t_http.cpp  t_imgui.cpp  t_lua_vm.cpp  t_meta.cpp  t_mixer.cpp  t_path_tools.cpp  t_picture.cpp  t_rect.cpp  t_scene.cpp  t_signal.cpp  t_sort.cpp  t_string.cpp  t_time.cpp  t_timer.cpp  t_types.cpp  t_vector.cpp  t_version.cpp  t_video_stream.cpp  t_window.cpp  utils.cpp  utils.h
harfang/tests/data/: readme.txt
harfang/tests/engine/: animation.cpp  assets.cpp  audio.cpp  iso_surface.cpp  meta.cpp  picture.cpp  scene.cpp  video_stream.cpp
harfang/tests/foundation/: cext.cpp  clock.cpp  cmd_line.cpp  color.cpp  curve.cpp  data.cpp  data_rw_interface.cpp  dir.cpp  easing.cpp  file.cpp  file_rw_interface.cpp  frustum.cpp  generational_vector_list.cpp  guid.cpp  intrusive_shared_ptr_st.cpp  log.cpp  mat3.cpp  mat4.cpp  mat44.cpp  math.cpp  minmax.cpp  obb.cpp  os.cpp  pack_float.cpp  path_tools.cpp  plane.cpp  projection.cpp  quaternion.cpp  rand.cpp  rect.cpp  rw_interface.cpp  signal.cpp  string.cpp  time.cpp  timer.cpp  units.cpp  vec2.cpp  vec3.cpp  vec4.cpp  vector_list.cpp  (+1 more)
harfang/tests/platform/: window.cpp
harfang/tests/script/: lua_vm.cpp
languages/hg_go/: CMakeLists.txt
languages/hg_lua/: CMakeLists.txt  bin.lua
languages/hg_python/: CMakeLists.txt  DESCRIPTION.rst
languages/hg_python/bdist_wheel/: CMakeLists.txt  DESCRIPTION.rst  README.rst  __init__.py  rename.py  setup.cfg  setup.py
languages/hg_python/pip/: CMakeLists.txt  pyproject.toml  setup.cfg  setup.py
tools/assetc/: CMakeLists.txt  assetc.cpp
tools/assetc/bulletc/: CMakeLists.txt  main.cpp
tools/assetc/recastc/: CMakeLists.txt  (+1 more)
tools/assimp_converter/: CMakeLists.txt  assimp_converter.cpp  fbx_optimizegraph.cpp  fbx_optimizegraph.h
tools/fbx_converter/: CMakeLists.txt  fbx_converter.cpp
tools/gltf_converter/: CMakeLists.txt  gltf_exporter.cpp  gltf_importer.cpp  tiny_gltf.h
(+8 files in other folders)
